--- a/tests/templating/service.yaml.tmpl
+++ b/tests/templating/service.yaml.tmpl
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .name }}-service
-  namespace: {{ .namespace }}
+  name: {{ .appName }}-service
+  namespace: {{ if .namespace }}{{ .namespace }}{{ else }}default{{ end }}
 spec:
   selector:
-    app: {{ .name }}
+    app: {{ .appName }}
   ports:
   - protocol: TCP
-    port: {{ .port }}
-    targetPort: {{ .port }}
-  type: {{ .serviceType }}
+    port: {{ if .port }}{{ .port }}{{ else }}8080{{ end }}
+    targetPort: {{ if .port }}{{ .port }}{{ else }}8080{{ end }}
+  type: {{ if .serviceType }}{{ .serviceType }}{{ else }}ClusterIP{{ end }}
